--- a/publications.bib
+++ b/publications.bib
@@ -11,15 +11,10 @@
 }
 
 @article{Hashemifar_2019,
-  author  = {Hashemifar, Z. S. and Adhivarahan, C. and and Dantu, K.}, 
-  title   = {Augmenting Visual SLAM with Wi-Fi Sensing For Indoor Applications},
-  journal = {Autonomous Robots},
-  year    = {},
-  number  = {},
-  pages   = {},
-  month   = {},
-  note    = {Submitted}, 
-  volume  = {},
+  title={Augmenting Visual SLAM with Wi-Fi Sensing For Indoor Applications},
+  author={Hashemifar, Zakieh S and Adhivarahan, Charuvahan and Balakrishnan, Anand and Dantu, Karthik},
+  journal={arXiv preprint arXiv:1903.06687},
+  year={2019}
 }
 @inproceedings{Hashemifar_IROS,
   author  = {Hashemifar, Z. S. and and Dantu, K.}, 
