--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,7 @@
 \makecvtitle
 \vspace{-25pt}
 \section{Interests}
-\cvitem{}{Simultaneous Localization and Mapping, Perception and Manipulation, Multi-Robots Applications}
+\cvitem{}{Simultaneous Localization and Mapping, Perception, Sensor Fusion, Multi-Robots Systems}
 \section{Technical Skills}
 \cvitem{OS}{Linux, Windows, ROS (Robotic Operating System)}
 \cvitem{Programming Languages}{C++ (proficient), Matlab, Python, PHP, Java, HTML, C, C\#}
@@ -88,8 +88,8 @@
 \begin{itemize}
 \item Implemented a general approach for Wi-Fi sensing fusion into any visual SLAM algorithm
 \item Incorporated Wi-Fi sensing into three well-known visual SLAM algorithms including ORB-SLAM, RTAB-Map and RGBD-SLAM%better handling of feature correspondences
-\item Increased the localization/mapping accuracy of augmented algorithms
-\item Decreased the computation time of loop closure detections
+\item Increased the localization/mapping accuracy of augmented algorithms by 11\% on average
+\item Decreased the computation time by 15\% to 25\% ob average 
 \item The uniqueness lies in the generality of the approach and no requirement of training phase 
 %In our recent work, we are trying to estimate a permanence probability for objects within an environment and the geometrical relations among them. In semi-static environments, there are many objects which have random movements over time. 
 %We conjecture that we can detect these changes over time and use them for increasing the accuracy of loop closures and SLAM algorithms.
@@ -153,7 +153,7 @@
 \cvitem{2011}{$3^{rd}$ Ranking, among more than 10000 applicants in nationwide university entrance exam for M.Sc. graduate students}
 \cvitem{2010}{$2^{nd}$ Ranking, among the students of Information Technology at the Department of Electrical and Computer Engineering, University of Tehran}
 \cvitem{2005}{$188^{th}$ Ranking, among more than 400000 applicants in the nationwide university entrance exam for undergraduate students}
-\cvitem{2002}{Qualified Stage 1 of National Mathematics Olympiad contest}
+\cvitem{2002}{Semi-finalist of National Mathematics Olympiad contest}
 
 %Detailed achievements:%
 %\begin{itemize}%
