--- a/publications.bib
+++ b/publications.bib
@@ -9,11 +9,20 @@
   note    = {To be submitted}, 
   volume  = {},
 }
+@inproceedings{hashemifar_icra_workshop,
+  title={Wiception: Augmenting Visual Sensing with Wireless Sensing for Fun and Profit},
+  author={Balakrishnan, A. and Adhivarahan, C. and Hashemifar, Z. S. and Dantu, K.},
+  booktitle={2019 IEEE International Conference on Robotics and Automation (ICRA)},
+  pages={},
+  year={},
+  organization={IEEE},
+  note={Accepted}
+}
 
 @article{Hashemifar_2019,
   title={Augmenting Visual SLAM with Wi-Fi Sensing For Indoor Applications},
   author={Hashemifar, Zakieh S and Adhivarahan, Charuvahan and Balakrishnan, Anand and Dantu, Karthik},
-  journal={arXiv preprint arXiv:1903.06687},
+  journal={arXiv preprint arXiv:1903.06687, Under Review for Autonomous Robots Journal},
   year={2019}
 }
 @inproceedings{Hashemifar_IROS,
