--- a/moderncvstylebanking.sty
+++ b/moderncvstylebanking.sty
@@ -88,9 +88,9 @@
       \ifthenelse{\equal{\@addresscountry}{}}{}{\addtomaketitle[~--~]{\@addresscountry}}%
       \flushmaketitle\@firstmaketitleelementtrue\\}%
     \collectionloop{phones}{% the key holds the phone type (=symbol command prefix), the item holds the number
-      \addtomaketitle{\csname\collectionloopkey phonesymbol\endcsname\collectionloopitem}}%
-    \ifthenelse{\isundefined{\@email}}{}{\addtomaketitle{\emailsymbol\emaillink{\@email}}}%
-    \ifthenelse{\isundefined{\@homepage}}{}{\addtomaketitle{\homepagesymbol\httplink{\@homepage}}}%
+      \addtomaketitle{\csname\collectionloopkey phonesymbol\endcsname\collectionloopitem \hspace{2.5ex} \emailsymbol\emaillink{\@email} \hspace{2ex} \homepagesymbol\httplink{\@homepage}}}%
+    %\ifthenelse{\isundefined{\@email}}{}{\addtomaketitle{\emailsymbol\emaillink{\@email} \homepagesymbol\httplink{\@homepage}}}%
+    %\ifthenelse{\isundefined{\@homepage}}{}{\addtomaketitle{\homepagesymbol\httplink{\@homepage}}}%
     \ifthenelse{\isundefined{\@extrainfo}}{}{\addtomaketitle{\@extrainfo}}%
     \flushmaketitle}\\[2.5em]}% need to force a \par after this to avoid weird spacing bug at the first section if no blank line is left after \maketitle
 
